--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
-.Portfolio-nav{
+.portfolio-nav{
 	padding:0;
 	margin:0 0 45px 0;
 	list-style:none;
 	text-align:center;
 }
-.Portfolio-nav li{
+.portfolio-nav li{
 	margin:0 10px;
 	display:inline;
 }
-.Portfolio-nav li a{
+.portfolio-nav li a{
 	display:inline-block;
 	padding:10px 22px;
 	font-size:12px;
@@ -19,7 +19,7 @@
 	margin-bottom:5px;
 	transition:all 0.3s ease-in-out;
 }
-.Portfolio-nav li a:hover{
+.portfolio-nav li a:hover{
 	background:#7cc576;
 	color:#fff;
 	text-decoration:none;
@@ -30,7 +30,7 @@
 	padding-left:15px;
 }
 
-.Portfolio-box{
+.portfolio-box{
 	text-align:center;
 	margin-bottom:30px;
 	height:350px;
@@ -39,16 +39,16 @@
 	float:left;
 	padding:0;
 }
-.Portfolio-box img{
+.portfolio-box img{
 	margin-bottom:25px;
 	transition:all 0.3s ease-in-out;
 }
 
-.Portfolio-box img:hover {
+.portfolio-box img:hover {
 	opacity: 0.6;
 }
 
-.Portfolio-nav li a.current{
+.portfolio-nav li a.current{
 	background:#7cc576;
 	color:#fff;
 	text-decoration:none;
